Represent internal event payloads as records